refactor: batch up to interview/oop-senior (41/53)